syntax = "proto3";
package dbtesterpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// DatabaseID differentiates between major or minor releases (possibly different APIs)
// of each database. Make sure to make accordingn changes in 'flag_*' whenever an ID
// is added/removed.
enum DatabaseID {
  // https://github.com/coreos/etcd/releases
  etcd__other = 0;
  etcd__tip   = 1;
  etcd__v3_2  = 2;
  etcd__v3_3  = 3;

  // https://zookeeper.apache.org/releases.html
  zookeeper__r3_5_3_beta = 100;

  // https://github.com/hashicorp/consul/releases
  consul__v1_0_2 = 200;

  // https://github.com/coreos/zetcd/releases
  zetcd__beta = 300;

  // https://github.com/coreos/cetcd/releases
  cetcd__beta = 400;
}
